# vocast

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
assets/: demo.tape  make_gif.sh
src/vocast/: audio.py  chunking.py  cli.py  fetch.py  library.py  pipeline.py  playback.py  server.py
src/vocast/engines/: __init__.py  engine.py  kokoro_engine.py
tests/: test_commands.py  test_cover.py  test_resolver.py
