[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vocast"
version = "0.1.0"
description = "Convert articles to audio you can stream, using local TTS models"
requires-python = ">=3.10"
dependencies = [
    "kokoro>=0.9.4",
    "numpy",
    "soundfile",
    "pydub",
    "fastapi",
    "uvicorn",
]

[project.scripts]
vocast = "vocast.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vocast"]
