[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vocast"
version = "0.1.3"
description = "Convert articles to audio you can stream, using local TTS models"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Conor Murphy", email = "conor@cnrmurphy.com" }]
keywords = ["tts", "text-to-speech", "kokoro", "podcast", "audio", "rss"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "kokoro>=0.9.4",
    "numpy",
    "soundfile",
    "pydub",
    "imageio-ffmpeg",
    "fastapi",
    "uvicorn",
    "trafilatura",
]

[project.urls]
Homepage = "https://github.com/cnrmurphy/vocast"
Repository = "https://github.com/cnrmurphy/vocast"

[project.scripts]
vocast = "vocast.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vocast"]
